--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ioc",
     "jest",
     "jest-fetch-mock",
-    "json-server",a
+    "json-server",
     "persistence",
     "react",
     "react-hooks",
