--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test-snapshot-update": "react-scripts test -u",
     "test:coverage": "react-scripts test --watchAll=false --coverage",
     "eject": "react-scripts eject",
     "lint": "eslint './src/**/*.{ts,tsx}'",
@@ -13,21 +14,21 @@
     "start-deck": "mdx-deck deck/ru/deck.mdx"
   },
   "dependencies": {
-    "@types/jest": "24.0.18",
+    "@types/jest": "25.2.3",
     "@types/node": "12.7.3",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
+    "@types/react": "16.13.1",
+    "@types/react-dom": "16.13.1",
     "cross-fetch": "^3.0.4",
     "dotenv": "^8.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
-    "typescript": "3.6.2"
+    "typescript": "3.9.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/react-hooks": "^3.2.1",
+    "@testing-library/dom": "^7.10.1",
+    "@testing-library/react": "^10.2.1",
+    "@testing-library/react-hooks": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "code-surfer": "3.1.1",
