--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "dependencies": {
     "@types/jest": "25.2.3",
     "@types/node": "12.7.3",
-    "@types/react": "16.13.1",
-    "@types/react-dom": "16.13.1",
+    "@types/react": "16.9.36",
+    "@types/react-dom": "16.9.8",
     "cross-fetch": "^3.0.4",
     "dotenv": "^8.2.0",
     "react": "^16.9.0",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^7.10.1",
+    "@testing-library/jest-dom": "^5.10.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/react-hooks": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
